<resources>
    <string name="app_name">WordsFactory</string>
    <string name="introFirstMain">Learn anytime and anywhere</string>
    <string name="introSecondMain">Find a course for you</string>
    <string name="introThirdMain">Improve your skills</string>
    <string name="introSub">Quarantine is the perfect time to spend your day learning something new, from anywhere!</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="error">Error</string>
    <string name="noSound">No sound</string>
    <string name="LetsStart">Let’s Start</string>
    <string name="SignUp">Sign up</string>
    <string name="AddToDictionary">Add to Dictionary</string>
    <string name="createAcc">Create your account</string>
    <string name="password">Password</string>
    <string name="none" />
    <string name="email">E-mail</string>
    <string name="name">Name</string>
    <string name="warning">Blank space warning</string>
    <string name="pleaseEnter">Please Enter these fields:</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="meanings">Meanings:</string>
    <string name="part_of_speech">Part of Speech:</string>
    <string name="example">Example:</string>
    <string name="baseUrl">https://api.dictionaryapi.dev/api/v2/entries/en/</string>
    <string name="wordIsAlready">This word is already saved</string>
    <string name="wordIsSaved">Saved</string>
    <string name="nameAdd">"Name "</string>
    <string name="emailAdd">"Email "</string>
    <string name="passAdd">Password</string>
    <string name="fakeWord">No such word in dictionary</string>
    <string name="noExample">no example</string>
    <string name="video">Video</string>
    <string name="training">Training</string>
    <string name="dictionary">Dictionary</string>
    <string name="AlertFragmentMainText">first</string>
    <string name="AlertFragmentSubText">second</string>
    <string name="description">description</string>
    <string name="reminderDescription">reminder to train learned words once a day</string>
    <string name="reminder">Training reminder</string>
    <string name="reminderTitle">Hey champion!</string>
    <string name="reminderMsg">Don\'t forget to learn your words</string>
    <string name="forbiddenLink1">🚫 forbidden link 🚫</string>
    <string name="forbiddenLink2">you can only navigate through Video Zone</string>
    <string name="save">Add to Dictionary</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="forward"><![CDATA[>]]></string>
    <string name="start">Start</string>
    <string name="thereAre">There are</string>
    <string name="wordsInDictionary">words in your Dictionary.</string>
    <string name="start_the_training">Start the Training?</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="_GO">GO!</string>
    <string name="orange">#FFE3562A</string>
    <string name="blue">#65AAEA</string>
    <string name="green">#5BA092</string>
    <string name="yellow">#F2A03F</string>
    <string name="red">#EF4949</string>
    <string name="training_is_finished">Training is finished</string>
    <string name="again">Again</string>
    <string name="correct">Correct:</string>
    <string name="incorrect">Incorrect:</string>
    <string name="cancel">Cancel</string>
    <string name="my_dictionary">My Dictionary</string>
    <string name="i_already_remember">I already remember</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widgetWordsText">Words</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="open">Open</string>
</resources>