<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <TextView
        android:id="@+id/howManyWordsText"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="240dp"
        android:text="@string/thereAre" />

    <TextView
        android:id="@+id/startTheTrainingText"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/howManyWordsText"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/start_the_training" />

    <Button
        android:id="@+id/startBtn"
        style="@style/mainBtn"
        android:layout_width="311dp"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginVertical="40dp"
        android:background="@drawable/main_btn"
        android:text="@string/start"
        app:backgroundTint="@null" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/startTheTrainingText"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        tools:visibility="visible">

        <com.google.android.material.progressindicator.CircularProgressIndicator
            android:id="@+id/progressBar"
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:indicatorSize="150dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:trackCornerRadius="20dp"
            app:trackThickness="8dp" />

        <TextView
            android:id="@+id/countDown"
            style="@style/mainText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_GO"
            android:textSize="70sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/progressBar"
            app:layout_constraintEnd_toEndOf="@id/progressBar"
            app:layout_constraintStart_toStartOf="@id/progressBar"
            app:layout_constraintTop_toTopOf="@id/progressBar" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</RelativeLayout>