<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_widget"
    style="@style/Widget.WordsFactory.AppWidget.Container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_widget"
    android:theme="@style/SplashTheme.AppWidgetContainer">

    <TextView
        android:id="@+id/appwidget_app_name_text"
        style="@style/mainText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_widget_head"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textAlignment="textStart"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/appwidget_text_my_dictionary"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appwidget_app_name_text"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/my_dictionary"
        android:textAlignment="textStart"

        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/appwidget_text_my_dictionary_stats"
        style="@style/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/appwidget_text_my_dictionary"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="textStart"

        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/appwidget_text_remember"
        style="@style/mainText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/appwidget_text_my_dictionary"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:text="@string/i_already_remember"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/appwidget_text_remember_stats"

        style="@style/subText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@id/appwidget_text_remember"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textAlignment="textStart"
        android:textColor="@color/black"
        android:textSize="12sp" />
</RelativeLayout>